tested overflow issues again

--- a/styles/3-base/_reset.scss
+++ b/styles/3-base/_reset.scss
@@ -34,10 +34,14 @@ ul{
   margin:0;
   padding:0;
 }
+/*Prevent overflow */
+:root {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
 
-/*Prevent overflow hidden changes screen width*/
-:root html{
-  position:absolute;
+:root html {
+  position: absolute;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
